# GJK

./: App.cpp  App.h  CMakeLists.txt  ComandosCompilacionMINGW.txt  Config.h  ConvexHull2D.cpp  ConvexHull2D.h  HelpMath.h  PrimitiveTypes.h  README.md  Vertex2D.h  gjk.cpp  gjk.h  main.cpp
